--- a/package.json
+++ b/package.json
@@ -8,6 +8,10 @@
     "start": "node server.js",
     "seed": "node seeds/seed.js"
   },
+  "engines": {
+    "node": "14.16.0",
+    "npm": "6.14.11"
+  },
   "homepage": "https://github.com/khopkins206/tech-blog",
   "author": "",
   "license": "ISC",
